# NutriTrack

./: .coverage  .gitignore  COMMIT_MESSAGE.md  DATABASE_GUIDE.md  FINAL_VALIDATION_REPORT.txt  FIXES_SUMMARY.md  RAG_SETUP.md  README.txt  REQUIREMENTS_EVALUATION.md  SCREENSHOT_GUIDE.md  VALIDATION_REPORT.md  Vision.txt  __scan_bytes.py  __scan_demo.py  dbwdi.db  fchart.drawio  flchart.drawio  project-tree.txt  pyrightconfig.json  setup_rag.py  start_server.bat  start_server.sh  test_rag.py
backend/: .coverage  .env  RAG_REFACTOR_SUMMARY.md  TESTING.md  __init__.py  check_rag_state.py  dbwdi.db  dbwdi.db.bak  embed_service.py  eval_output.txt  eval_results.txt  inspect_db.py  launch_embed_service.py  launch_main_api.py  nutritrack.db  pyproject.toml  pytest.ini  rag_eval_output.txt  rag_response_detailed.json  rag_test_log.txt  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  test_results.txt
backend/.githooks/: pre-commit.ps1
backend/app/: config.py  db.py  main.py
backend/app/models/: foods.py  foods_extra.py  meals.py  wearables.py
backend/app/routers/: advisor.py  demo_ui.py  foods.py  foods_lookup.py  ingest.py  meals.py  meals_ingest.py  nlp.py  summary.py  wearables.py
backend/app/utils/: nutrition.py
backend/data/: foods.csv
backend/scripts/: bootstrap.ps1  embed_service.py  eval_output.txt  import_foods.py  run_rag_eval.py  seed_smoothie_bowls.py  upgrade_add_meal_columns.py  upgrade_foods_extra.py
backend/src/: show_cache_stats.py
backend/src/app/: db.py  main.py
backend/tests/: conftest.py  rag_metrics_test.py
(+63 files in other folders)
